src/styles/App.css
/* Reset some basic styles */
* {
  margin: 0;
  padding: 0;
}

body, html {
  height: 100%;
  font-family: Arial, sans-serif;
  background-color: #f0f0f0;
}

/* Centering content with Flexbox */
.centered-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  min-height: 100vh; /* Full viewport height */
  text-align: center; /* Center text inside the container */

}

.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #4CAF50;
  padding: 10px 20px;
  position: sticky;
  top: 0;
  width: 100%;
  z-index: 1000; /* Ensures navbar is on top */
}

.navbar .logo {
  color: white;
  font-size: 24px;
  font-weight: bold;
}

.navbar .nav-links {
  list-style: none;
  display: flex;
  margin: 0;
  padding: 0;
}

.navbar .nav-links li {
  margin-left: 20px;
}

.navbar .nav-links li a {
  color: white;
  text-decoration: none;
  font-size: 18px;
}

/* Section styles */
.section1, .section2, .section3 {
  width: 100%;
  padding: 20px;
}

.section1 {
  background-color: #fcd34d;
}

.section2 {
  background-color: #111827;
  color: white;
  margin-left: -20px; /* Offset the left margin to align with section 1 */
  margin-right: -20px; /* Offset the right margin to align with section 3 */
}

.section2 img {
  max-width: 100%;
  height: auto;
}

.section3 {
  background-color: #f9fafb;
}

.section1 h1 {
  color: #333;
  font-size: 36px;
}

.section1 h2 {
  color: #666;
  font-size: 24px;
}

.section2 p {
  color: #ddd;
  font-size: 18px;
}

.section3 a {
  display: inline-block;
  padding: 10px 20px;
  background-color: #4CAF50;
  color: white;
  text-decoration: none;
  border-radius: 5px;
}

.footer {
  background-color: #333;
  color: white;
  text-align: center;
  padding: 10px;
  position: fixed;
  width: 100%;
  bottom: 0;
}

/* Responsive design */
@media (max-width: 768px) {
  .navbar .nav-links {
    flex-direction: column;
    align-items: center;
  }

  .navbar .nav-links li {
    margin-left: 0;
    margin-bottom: 10px;
  }

  .centered-container {
    padding: 10px;
  }

  .section1 h1 {
    font-size: 28px;
  }

  .section1 h2 {
    font-size: 20px;
  }

  .section2 p, .section2 img, .section3 a {
    font-size: 16px;
  }
}

